admission/ValidatingAdmissionPolicy/policies/selinux-role/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-role-pod
  annotations:
    kubeapt.io/uuid: "7ee786ba-34bf-43d1-8873-cb16afbe89af"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    seLinuxOptions:
      role: role_r
